--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,18 @@ h2{
     color: aquamarine;
 }
 
+h3{
+    color: red;
+    text-align: center;
+}
+
+p{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 a{
     display: block;
     margin-left: auto;
