--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,22 @@
-body{
-    font-family: sans-serif;
-    background-color: blue;
-}
+<style>
+        h1 {
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace;
+            letter-spacing: 5px; 
+        }
+     
+        body {
+            animation: colorchange 50s;
+            -webkit-animation: colorchange 100s;
+        }
+  
+        @keyframes colorchange {
+            0%   {background: white;}
+            25%  {background: yellow;}
+            50%  {background: blue;}
+            75%  {background: green;}
+            100% {background: black;}
+        }
 
 body > div, form {
 	overflow: hidden;
@@ -9,11 +24,21 @@ body > div, form {
 }
 
 h2{
+   background-color:  #1d2675;
+ color: #0f0;
     text-align: center;
-    color: aquamarine;
+    box-shadow: 0 0 10px rgb(0,0,0);
+    border: 5px groove silver;
+    border-radius: 12px;
+    width: 550px;
+    font-size: 18pt;
+    font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h3{
+    font-family: Acme, Arial, sans-serif;
     color: red;
     text-align: center;
 }
