--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ fieldset .column {
 }
 
 .qText{
-    color: #cfcfcfde;
+    color: yellow ;
     font-size: 22px;
     width: 265px;
     box-sizing: border-box;
