--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body > div, form {
 
 h2{
    background-color:  #1d2675;
- color: #0f0;
+    color: #0f0;
     text-align: center;
     box-shadow: 0 0 10px rgb(0,0,0);
     border: 5px groove silver;
@@ -59,12 +59,20 @@ a{
 }
 
 a:visited{
-    color: azure;
+        color: pink;
+	font-family: 'Segoe UI', sans-serif;;
+	font-size: 22 pt;
+	box-sizing: border-box;
+        border-radius: 12px;
 }
 
 a:hover{
+    border: 1px solid #ddd;
+    padding: 2rem;
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 
@@ -73,15 +81,19 @@ fieldset {
 	background-color: #212b85;
 	border: 2px outset rgb(226, 224, 74);
 	border-radius: 10px;
-    border-style: groove;
+        border-style: groove;
 }
 
 legend {
+	color: orange;
+	font-size: 18 pt;
+	box-sizing: border-box;
+        border-radius: 12px;
 	background-color: #4CAF50;
-    border-style: groove;
+        border-style: groove;
 	border: 2px outset gray;
 	padding: 0.2em;
-    text-align: center;
+        text-align: center;
 }
 
 form{
