--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,13 @@ fieldset {
         border-style: groove;
 }
 
+input[type="submit"] {
+	text-align: center;
+	background-color: #FAA;
+	font-size: 100%;
+	font-weight: bold;
+}
+
 legend {
 	color: orange;
 	font-size: 18 pt;
